--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">AppTime</string>
     <string name="installation_time_header">Installation Time</string>
+    <string name="installation_time_bottom_menu">Install Time</string>
+
     <string name="last_using_date_header">Time of last use</string>
+    <string name="last_using_date_bottom_menu">Last time</string>
+
     <string name="using_time_header">Usage percent per last month</string>
+    <string name="using_time_bottom_menu">Last usage</string>
+
     <string name="settings_header">Settings</string>
+    <string name="settings_bottom_menu">Settings</string>
 </resources>
